tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__FirstBreeding-AAAAAAAAAAAAAAAAAAACzw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 719,
  "prerequisites": [
    718
  ],
  "properties": {
    "auto_claim": false,
    "desc": "New plants have grown on your crop sticks. You can harvest the crop by right-clicking it.\n\nLeft-clicking will destroy the plant and drop a seedbag. This is not guaranteed however, but the chances rise as the maturity does. Collect 8 seeds of any kind to complete this quest.\n\nTo unlock the next quest, you will need the LV scanner.\n\nIf you haven't already, consider building some Filing Cabinets. They make storing and moving large quantities of seeds a breeze. Plus they will properly sort the seeds based on name. To find a specific seed, type its name in the NEI search bar, and double-click the bar so it highlights yellow. Now you can look through the Filing Cabinet and find the exact seedbag you want.\n\nOr use double chests and toss the ones you don't want.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "First Breeding",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    718
  ],
  "rewards": [],
  "tasks": []
}
