tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__FishTrapping20-AAAAAAAAAAAAAAAAAAAD8Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1009,
  "prerequisites": [
    65,
    633
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Fishing can be very boring. Why not automate it with a fish trap?\n\nThis is fish trap 2.0.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fish Trapping 2.0",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    65,
    633
  ],
  "rewards": [],
  "tasks": []
}
