tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__FreshWaterandMil-AAAAAAAAAAAAAAAAAAAD8g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1010,
  "prerequisites": [
    36
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Many cooking recipes need milk and water. Crafting it in the crafting table can be very tedious.\n\nIt is much easier using a Forestry worktable. Move all your buckets into the worktable, and shift-click to craft them all at once.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fresh Water and Milk",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36
  ],
  "rewards": [],
  "tasks": []
}
